{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 684,
  "lineage": "4f48c181-adab-2fb9-c006-a911040cb062",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:loadbalancer/jenkins-lb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-lb-1654825889.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "jenkins-lb",
            "idle_timeout": 400,
            "instances": [
              "i-0b60b54040d2661d8"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "jenkins-lb",
            "security_groups": [
              "sg-0afe7b6f3ab457f78"
            ],
            "source_security_group": "539507529953/jenkins_lbSG",
            "source_security_group_id": "sg-0afe7b6f3ab457f78",
            "subnets": [
              "subnet-051cc2970255ef08b",
              "subnet-082981d8389f13cf7",
              "subnet-0a8ee23aa0be61c19"
            ],
            "tags": {
              "Name": "jenkins-lb"
            },
            "tags_all": {
              "Name": "jenkins-lb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.Jenkins",
            "aws_key_pair.k8_ssh",
            "aws_security_group.Jenkins_SG",
            "aws_security_group.jenkins_lbSG",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e637cea2f053dfa",
            "arn": "arn:aws:ec2:us-east-1:539507529953:instance/i-0b60b54040d2661d8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b60b54040d2661d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04f7e90ec48394553",
            "private_dns": "ip-10-0-1-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021f90d9c7ffc583d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-006fe7ca978bfa465"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddd2f5bb87ffe58a",
            "tags": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-006fe7ca978bfa465"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8_ssh",
            "aws_security_group.Jenkins_SG",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0574da719dca65348",
            "arn": "arn:aws:ec2:us-east-1:539507529953:instance/i-05b05f8c5ab1888e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b05f8c5ab1888e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00af607fef2cc0cbb",
            "private_dns": "ip-10-0-101-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.27",
            "public_ip": "34.234.223.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08975fb373a602bf8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bd04683da1a88f90"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082981d8389f13cf7",
            "tags": {
              "Name": "Ansible"
            },
            "tags_all": {
              "Name": "Ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bd04683da1a88f90"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.k8_ssh",
            "aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "clusterlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0574da719dca65348",
            "arn": "arn:aws:ec2:us-east-1:539507529953:instance/i-06b480d963ae0e29b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b480d963ae0e29b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-002e11043ee1b9b57",
            "private_dns": "ip-10-0-101-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.130",
            "public_ip": "35.171.133.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa58affb959a60d9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d48e6cf401bd0786"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082981d8389f13cf7",
            "tags": {
              "Name": "clusterlb"
            },
            "tags_all": {
              "Name": "clusterlb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d48e6cf401bd0786"
            ]
          },
          "dependencies": [
            "aws_instance.masters",
            "aws_key_pair.k8_ssh",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0574da719dca65348",
            "arn": "arn:aws:ec2:us-east-1:539507529953:instance/i-0aef89dfd94c98fb1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aef89dfd94c98fb1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05b6e2db267ddd6ee",
            "private_dns": "ip-10-0-1-131.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07c2f6d0e4d692635",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d48e6cf401bd0786"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddd2f5bb87ffe58a",
            "tags": {
              "Name": "Master-01"
            },
            "tags_all": {
              "Name": "Master-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d48e6cf401bd0786"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8_ssh",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0574da719dca65348",
            "arn": "arn:aws:ec2:us-east-1:539507529953:instance/i-0652d0e417ec0aa36",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0652d0e417ec0aa36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a8f7bd08c394e10",
            "private_dns": "ip-10-0-2-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-022908c5b5da5b711",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d48e6cf401bd0786"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b56da2b4b92abd5c",
            "tags": {
              "Name": "Master-02"
            },
            "tags_all": {
              "Name": "Master-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d48e6cf401bd0786"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8_ssh",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0574da719dca65348",
            "arn": "arn:aws:ec2:us-east-1:539507529953:instance/i-069f938158b8cd09f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069f938158b8cd09f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e35ac66c41854603",
            "private_dns": "ip-10-0-3-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d5d4193f01126f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d48e6cf401bd0786"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f3f7ad604f5415d",
            "tags": {
              "Name": "Master-03"
            },
            "tags_all": {
              "Name": "Master-03"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d48e6cf401bd0786"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8_ssh",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0574da719dca65348",
            "arn": "arn:aws:ec2:us-east-1:539507529953:instance/i-0aa8aa619d796803e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa8aa619d796803e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f356aff8342f8d8",
            "private_dns": "ip-10-0-1-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037d27cb28716621d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d48e6cf401bd0786"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddd2f5bb87ffe58a",
            "tags": {
              "Name": "Worker-01"
            },
            "tags_all": {
              "Name": "Worker-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d48e6cf401bd0786"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8_ssh",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0574da719dca65348",
            "arn": "arn:aws:ec2:us-east-1:539507529953:instance/i-00f3493b8e030aaf5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f3493b8e030aaf5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024c24215bfd03999",
            "private_dns": "ip-10-0-2-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef00fd2e20137040",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d48e6cf401bd0786"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b56da2b4b92abd5c",
            "tags": {
              "Name": "Worker-02"
            },
            "tags_all": {
              "Name": "Worker-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d48e6cf401bd0786"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8_ssh",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0574da719dca65348",
            "arn": "arn:aws:ec2:us-east-1:539507529953:instance/i-002b83433ffb66fc5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002b83433ffb66fc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-017308b740504d97f",
            "private_dns": "ip-10-0-3-17.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027ea85a70cee9819",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d48e6cf401bd0786"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f3f7ad604f5415d",
            "tags": {
              "Name": "Worker-03"
            },
            "tags_all": {
              "Name": "Worker-03"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d48e6cf401bd0786"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8_ssh",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "graf-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:loadbalancer/app/graf-alb/2c037fe721e4af94",
            "arn_suffix": "app/graf-alb/2c037fe721e4af94",
            "desync_mitigation_mode": "defensive",
            "dns_name": "graf-alb-666723472.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:loadbalancer/app/graf-alb/2c037fe721e4af94",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "graf-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09f14a38ec866854d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051cc2970255ef08b"
              },
              {
                "subnet_id": "subnet-082981d8389f13cf7"
              },
              {
                "subnet_id": "subnet-0a8ee23aa0be61c19"
              }
            ],
            "subnets": [
              "subnet-051cc2970255ef08b",
              "subnet-082981d8389f13cf7",
              "subnet-0a8ee23aa0be61c19"
            ],
            "vpc_id": "vpc-0a017a3d100aad0de",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.k8_workers",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "k8s-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:loadbalancer/app/k8s-alb/d93bd13142fac8e7",
            "arn_suffix": "app/k8s-alb/d93bd13142fac8e7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "k8s-alb-709955358.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:loadbalancer/app/k8s-alb/d93bd13142fac8e7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "k8s-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09f14a38ec866854d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051cc2970255ef08b"
              },
              {
                "subnet_id": "subnet-082981d8389f13cf7"
              },
              {
                "subnet_id": "subnet-0a8ee23aa0be61c19"
              }
            ],
            "subnets": [
              "subnet-051cc2970255ef08b",
              "subnet-082981d8389f13cf7",
              "subnet-0a8ee23aa0be61c19"
            ],
            "vpc_id": "vpc-0a017a3d100aad0de",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.k8_workers",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "pmt-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:loadbalancer/app/pmt-alb/0c7b68d34471e5cf",
            "arn_suffix": "app/pmt-alb/0c7b68d34471e5cf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pmt-alb-328915307.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:loadbalancer/app/pmt-alb/0c7b68d34471e5cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pmt-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09f14a38ec866854d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051cc2970255ef08b"
              },
              {
                "subnet_id": "subnet-082981d8389f13cf7"
              },
              {
                "subnet_id": "subnet-0a8ee23aa0be61c19"
              }
            ],
            "subnets": [
              "subnet-051cc2970255ef08b",
              "subnet-082981d8389f13cf7",
              "subnet-0a8ee23aa0be61c19"
            ],
            "vpc_id": "vpc-0a017a3d100aad0de",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.k8_workers",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alblistener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:listener/app/k8s-alb/d93bd13142fac8e7/7bf3f28e5f1909a9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/targetgroup/a199e9ac2b6e2164",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:listener/app/k8s-alb/d93bd13142fac8e7/7bf3f28e5f1909a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:loadbalancer/app/k8s-alb/d93bd13142fac8e7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.k8s-alb",
            "aws_lb_target_group.targetgroup",
            "aws_security_group.k8_workers",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "graf-alblistener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:listener/app/graf-alb/2c037fe721e4af94/dec0bccbca4a73f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/graf-targetgroup/a87d41cd515c9c85",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:listener/app/graf-alb/2c037fe721e4af94/dec0bccbca4a73f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:loadbalancer/app/graf-alb/2c037fe721e4af94",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.graf-alb",
            "aws_lb_target_group.graf-targetgroup",
            "aws_security_group.k8_workers",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pmt-alblistener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:listener/app/pmt-alb/0c7b68d34471e5cf/8a8ea5ac6aa37566",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/pmt-targetgroup/78b5e843fc59ce07",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:listener/app/pmt-alb/0c7b68d34471e5cf/8a8ea5ac6aa37566",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:loadbalancer/app/pmt-alb/0c7b68d34471e5cf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.pmt-alb",
            "aws_lb_target_group.pmt-targetgroup",
            "aws_security_group.k8_workers",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "graf-targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/graf-targetgroup/a87d41cd515c9c85",
            "arn_suffix": "targetgroup/graf-targetgroup/a87d41cd515c9c85",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/graf-targetgroup/a87d41cd515c9c85",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "graf-targetgroup",
            "port": 31300,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pmt-targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/pmt-targetgroup/78b5e843fc59ce07",
            "arn_suffix": "targetgroup/pmt-targetgroup/78b5e843fc59ce07",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/pmt-targetgroup/78b5e843fc59ce07",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pmt-targetgroup",
            "port": 31090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/targetgroup/a199e9ac2b6e2164",
            "arn_suffix": "targetgroup/targetgroup/a199e9ac2b6e2164",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/targetgroup/a199e9ac2b6e2164",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "targetgroup",
            "port": 30001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targetgroupatt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/targetgroup/a199e9ac2b6e2164-20221207011521660500000009",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/targetgroup/a199e9ac2b6e2164",
            "target_id": "i-0aa8aa619d796803e"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k8_ssh",
            "aws_lb_target_group.targetgroup",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/targetgroup/a199e9ac2b6e2164-2022120701152187800000000c",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/targetgroup/a199e9ac2b6e2164",
            "target_id": "i-00f3493b8e030aaf5"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k8_ssh",
            "aws_lb_target_group.targetgroup",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/targetgroup/a199e9ac2b6e2164-2022120701152193510000000f",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/targetgroup/a199e9ac2b6e2164",
            "target_id": "i-002b83433ffb66fc5"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k8_ssh",
            "aws_lb_target_group.targetgroup",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targetgroupatt4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/pmt-targetgroup/78b5e843fc59ce07-2022120701152183500000000a",
            "port": 31090,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/pmt-targetgroup/78b5e843fc59ce07",
            "target_id": "i-0aa8aa619d796803e"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k8_ssh",
            "aws_lb_target_group.pmt-targetgroup",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/pmt-targetgroup/78b5e843fc59ce07-20221207011521996900000010",
            "port": 31090,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/pmt-targetgroup/78b5e843fc59ce07",
            "target_id": "i-00f3493b8e030aaf5"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k8_ssh",
            "aws_lb_target_group.pmt-targetgroup",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/pmt-targetgroup/78b5e843fc59ce07-2022120701152192310000000e",
            "port": 31090,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/pmt-targetgroup/78b5e843fc59ce07",
            "target_id": "i-002b83433ffb66fc5"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k8_ssh",
            "aws_lb_target_group.pmt-targetgroup",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targetgroupatt7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/graf-targetgroup/a87d41cd515c9c85-2022120701152184370000000b",
            "port": 31300,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/graf-targetgroup/a87d41cd515c9c85",
            "target_id": "i-0aa8aa619d796803e"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k8_ssh",
            "aws_lb_target_group.graf-targetgroup",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/graf-targetgroup/a87d41cd515c9c85-20221207011522210400000011",
            "port": 31300,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/graf-targetgroup/a87d41cd515c9c85",
            "target_id": "i-00f3493b8e030aaf5"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k8_ssh",
            "aws_lb_target_group.graf-targetgroup",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/graf-targetgroup/a87d41cd515c9c85-2022120701152189520000000d",
            "port": 31300,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:539507529953:targetgroup/graf-targetgroup/a87d41cd515c9c85",
            "target_id": "i-002b83433ffb66fc5"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k8_ssh",
            "aws_lb_target_group.graf-targetgroup",
            "aws_security_group.CLUSTER_SG",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CLUSTER_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:security-group/sg-0d48e6cf401bd0786",
            "description": "Allow TLS Inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d48e6cf401bd0786",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh acess",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "CLUSTER_SG",
            "name_prefix": "",
            "owner_id": "539507529953",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "CLUSTER_SG"
            },
            "tags_all": {
              "name": "CLUSTER_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Jenkins_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:security-group/sg-006fe7ca978bfa465",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006fe7ca978bfa465",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Jenkins_SG",
            "name_prefix": "",
            "owner_id": "539507529953",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:security-group/sg-0bd04683da1a88f90",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd04683da1a88f90",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "539507529953",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_lbSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:security-group/sg-0afe7b6f3ab457f78",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afe7b6f3ab457f78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jenkins_lbSG",
            "name_prefix": "",
            "owner_id": "539507529953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins_lbSG"
            },
            "tags_all": {
              "Name": "Jenkins_lbSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:security-group/sg-09f14a38ec866854d",
            "description": "sec group for k8 worker nodes",
            "egress": [],
            "id": "sg-09f14a38ec866854d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "terraform-20221207010746257400000001",
            "name_prefix": "terraform-",
            "owner_id": "539507529953",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce24b8a57a43eb6b",
            "association_id": "eipassoc-0ad46ec278ff4ae45",
            "domain": "vpc",
            "id": "eipalloc-0ce24b8a57a43eb6b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02b237faea35e51f0",
            "private_dns": "ip-10-0-101-200.ec2.internal",
            "private_ip": "10.0.101.200",
            "public_dns": "ec2-44-205-87-210.compute-1.amazonaws.com",
            "public_ip": "44.205.87.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:internet-gateway/igw-0ee7ad18d7e252097",
            "id": "igw-0ee7ad18d7e252097",
            "owner_id": "539507529953",
            "tags": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce24b8a57a43eb6b",
            "connectivity_type": "public",
            "id": "nat-065ccf62e7cd4b5af",
            "network_interface_id": "eni-02b237faea35e51f0",
            "private_ip": "10.0.101.200",
            "public_ip": "44.205.87.210",
            "subnet_id": "subnet-082981d8389f13cf7",
            "tags": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fcae3ec676e01fc01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-065ccf62e7cd4b5af",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fcae3ec676e01fc0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ee7ad18d7e252097",
            "id": "r-rtb-09a7e9eb00db9cd9d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a7e9eb00db9cd9d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:route-table/rtb-0fcae3ec676e01fc0",
            "id": "rtb-0fcae3ec676e01fc0",
            "owner_id": "539507529953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-065ccf62e7cd4b5af",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:route-table/rtb-09a7e9eb00db9cd9d",
            "id": "rtb-09a7e9eb00db9cd9d",
            "owner_id": "539507529953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee7ad18d7e252097",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07947515caeb68449",
            "route_table_id": "rtb-0fcae3ec676e01fc0",
            "subnet_id": "subnet-0ddd2f5bb87ffe58a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03417eb196f4047b4",
            "route_table_id": "rtb-0fcae3ec676e01fc0",
            "subnet_id": "subnet-0b56da2b4b92abd5c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090d89a3eae466738",
            "route_table_id": "rtb-0fcae3ec676e01fc0",
            "subnet_id": "subnet-05f3f7ad604f5415d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf3c7e2258f3f957",
            "route_table_id": "rtb-09a7e9eb00db9cd9d",
            "subnet_id": "subnet-082981d8389f13cf7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc67dab057095c1a",
            "route_table_id": "rtb-09a7e9eb00db9cd9d",
            "subnet_id": "subnet-051cc2970255ef08b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2fa3202b995e29b",
            "route_table_id": "rtb-09a7e9eb00db9cd9d",
            "subnet_id": "subnet-0a8ee23aa0be61c19"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:subnet/subnet-0ddd2f5bb87ffe58a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddd2f5bb87ffe58a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539507529953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "private-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "private-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:subnet/subnet-0b56da2b4b92abd5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b56da2b4b92abd5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539507529953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "private-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "private-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:subnet/subnet-05f3f7ad604f5415d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f3f7ad604f5415d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539507529953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "private-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "private-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:subnet/subnet-082981d8389f13cf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082981d8389f13cf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539507529953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "public-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:subnet/subnet-051cc2970255ef08b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051cc2970255ef08b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539507529953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "public-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:subnet/subnet-0a8ee23aa0be61c19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8ee23aa0be61c19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539507529953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "public-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a017a3d100aad0de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539507529953:vpc/vpc-0a017a3d100aad0de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023c3f39bf98946e0",
            "default_route_table_id": "rtb-07a910d434629dae3",
            "default_security_group_id": "sg-027056ef23d3b4e07",
            "dhcp_options_id": "dopt-0b180830beb475499",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a017a3d100aad0de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a910d434629dae3",
            "owner_id": "539507529953",
            "tags": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}